[Feat] send, receive messages